[gd_scene load_steps=2 format=2]

[ext_resource path="res://Classes/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
text = "Hello"

[node name="HealthDisplay" type="Label" parent="."]
margin_right = 50.0
margin_bottom = 14.0
text = "Health: "

[node name="HealthAmount" type="Label" parent="."]
margin_left = 48.0
margin_right = 88.0
margin_bottom = 14.0
text = "0"
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
